// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an article 1`] = `
<ArticleSkeleton>
  <View>
    <View>
      <View>
        <ModalImage
          aspectRatio={1.7777777777777777}
          caption={
            <Caption
              credits="Some Credits"
              text="Some Caption"
            />
          }
          highResSize={660}
          index={0}
          onImagePress={null}
          uri="https://crop169.io"
        />
      </View>
    </View>
    <View>
      <View>
        <ArticleLabel
          color="#1D1D1B"
          title="Some Label"
        />
      </View>
      <Text
        selectable={true}
      >
        Some Headline
      </Text>
      <Text
        accessibilityRole="header"
        aria-level="2"
      >
        Some Standfirst
      </Text>
      <View>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2019-03-14T12:00:00.000Z",
                "type": "NEW",
              },
            ]
          }
        />
      </View>
    </View>
    <View>
      <View>
        <Text>
          <ArticleBylineWithLinks
            ast={
              Array [
                Object {
                  "byline": Array [
                    Object {
                      "attributes": Object {},
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "Some byline",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "inline",
                    },
                  ],
                },
              ]
            }
          />
        </Text>
      </View>
      <View>
        <Text>
          Friday March 13 2015, 6:54pm, The Times
        </Text>
      </View>
    </View>
  </View>
</ArticleSkeleton>
`;

exports[`2. loading 1`] = `null`;

exports[`3. an error 1`] = `<ArticleError />`;

exports[`4. an article with no headline falls back to use shortheadline 1`] = `
<ArticleSkeleton>
  <View>
    <View />
    <View>
      <Text
        selectable={true}
      >
        Some Short Headline
      </Text>
      <View>
        <ArticleFlags />
      </View>
    </View>
    <View>
      <View>
        <Text>
          Friday March 13 2015, 6:54pm, The Times
        </Text>
      </View>
    </View>
  </View>
</ArticleSkeleton>
`;

exports[`5. an article with ads 1`] = `
<ArticleSkeleton>
  <View>
    <View />
    <View>
      <Text
        selectable={true}
      >
        Some Headline
      </Text>
      <View>
        <ArticleFlags />
      </View>
    </View>
    <View>
      <View>
        <Text>
          Friday March 13 2015, 6:54pm, The Times
        </Text>
      </View>
    </View>
  </View>
</ArticleSkeleton>
`;
